--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,7 @@
 <pre>
 You can always communicate about anything which can be improved
-on this website in the Red Language room on Gitter <a href="https://gitter.im/red/red" target="_blank">here</a>.
+on this website in the Red Language room <a href="https://gitter.im/red/red" target="_blank">on Gitter</a>,
+or create a ticket / submit a pull request <a href="https://github.com/red-by-example/red-by-example">on GitHub</a>.
 
 Also you can reach us via e-mail <a href="mailto:redbyexample@gmail.com">here</a>.
 </pre>
